Bug 14957 - vfs_shadow_copy2 breaks "smbd async dosmode" sync fallback
Summary: vfs_shadow_copy2 breaks "smbd async dosmode" sync fallback
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: VFS Modules (show other bugs)
Version: 4.16.0rc1
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-24 15:44 UTC by Ralph Böhme
Modified: 2022-05-02 09:47 UTC (History)
3 users (show)

See Also:


Attachments
git-am fix for 4.16.rcNext. (18.17 KB, patch)
2022-03-04 21:14 UTC, Jeremy Allison
slow: review+
Details
git-am fix for 4.15.next. (18.17 KB, patch)
2022-03-04 21:44 UTC, Jeremy Allison
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2022-01-24 15:44:51 UTC
vfs_shadow_copy2 uses vfs_not_implemented_getxattrat_send() as .getxattrat_send_fn() which fails async dosmode with ENOSYS. ENOSYS gets mapped to NT_STATUS_NOT_SUPPORTED by map_nt_error_from_unix(). Unfortunately the higher-level async completion function only checks for NT_STATUS_NOT_IMPLEMENTED.

Have patch, need bugnumber.
Comment 1 Jeremy Allison 2022-02-15 20:18:33 UTC
Ping, did this get merged ?
Comment 2 Ralph Böhme 2022-02-15 20:24:05 UTC
(In reply to Jeremy Allison from comment #1)
working on it...
Comment 3 Samba QA Contact 2022-02-28 20:54:04 UTC
This bug was referenced in samba master:

1e3e22cc45583cb11ef5dbc3c044bf6189fe6036
ecf56c1d9b6b898ed4060e3bba341392ddcc9b5a
ffdb1c3e00c233efc99e8f1a66a5f83beb4e07f3
97caec07ffd18f247134d21c3ba07c31591863bc
Comment 4 Jeremy Allison 2022-03-04 21:14:08 UTC
Created attachment 17190 [details]
git-am fix for 4.16.rcNext.

Cherry-picked from master.
Comment 5 Jeremy Allison 2022-03-04 21:44:41 UTC
Created attachment 17191 [details]
git-am fix for 4.15.next.

Back-ported from master.
Comment 6 Ralph Böhme 2022-03-25 20:20:49 UTC
Reassigning to Jule for inclusion in 4.15 and 4.16.
Comment 7 Jule Anger 2022-03-29 07:45:52 UTC
Pushed to autobuild-v4-{16,15}-test.
Comment 8 Samba QA Contact 2022-03-29 09:09:12 UTC
This bug was referenced in samba v4-15-test:

f0fb1f5187366d0fe2905fed62e621d3072e4dda
bf34d2fb5f34afb3ecbd64f8a7f9e6e51e7ed23e
f6b1d19ecbc5e8fe41a4027f5d6418bcb77e4a88
c4d8a5a43f26be7d37f6452ce2f51a5b70f0a6e7
Comment 9 Samba QA Contact 2022-03-29 10:22:12 UTC
This bug was referenced in samba v4-16-test:

84504306f1df79a08e5e4444fe0839800a121988
16be7d70450b234daebdfd2dc4813655d73e547c
310e334a59e8ddbaa2ad661ea709bdb77db35d2f
de314f9337547bf26dbb10268ce455e9a6bcc8da
Comment 10 Jule Anger 2022-03-29 14:54:27 UTC
Closing out bug report.

Thanks!
Comment 11 Samba QA Contact 2022-04-26 14:44:42 UTC
This bug was referenced in samba v4-15-stable (Release samba-4.15.7):

f0fb1f5187366d0fe2905fed62e621d3072e4dda
bf34d2fb5f34afb3ecbd64f8a7f9e6e51e7ed23e
f6b1d19ecbc5e8fe41a4027f5d6418bcb77e4a88
c4d8a5a43f26be7d37f6452ce2f51a5b70f0a6e7
Comment 12 Samba QA Contact 2022-05-02 09:47:42 UTC
This bug was referenced in samba v4-16-stable (Release samba-4.16.1):

84504306f1df79a08e5e4444fe0839800a121988
16be7d70450b234daebdfd2dc4813655d73e547c
310e334a59e8ddbaa2ad661ea709bdb77db35d2f
de314f9337547bf26dbb10268ce455e9a6bcc8da